sumo/tests/duarouter/errors/network/edge/root__edge#function__ungiven2/errors.duarouter
Error: Missing type in edge '2'.
Quitting (on error).
